generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum PlanType {
  FREE
  PRO
  AGENCY
}

enum ChangeReason {
  MANUAL
  BULK_PCT
  IPC_INDEC
  BCRA_RATE
  IMPORT
}

enum IndexType {
  IPC_INDEC
  IPC_INDEC_ALIMENTOS
  IPC_INDEC_BEBIDAS
  IPC_INDEC_VESTIMENTA
  IPC_INDEC_VIVIENDA
  IPC_INDEC_HOGAR
  IPC_INDEC_SALUD
  IPC_INDEC_TRANSPORTE
  IPC_INDEC_COMUNICACION
  IPC_INDEC_RECREACION
  IPC_INDEC_EDUCACION
  IPC_INDEC_RESTAURANTES
  IPC_INDEC_VARIOS
  BCRA_USD_OFICIAL
  BCRA_USD_MEP
}

enum MarginStatus {
  LOW
  WARNING
  OK
}

enum ProductUnit {
  unidad
  kg
  g
  lt
  ml
  pack
  docena
  caja
}

enum ExportFormat {
  PNG
  PDF
}

enum NotifType {
  NEW_IPC
  BCRA_USD_ALERT
  MARGIN_ALERT
  PLAN_EXPIRING
  PLAN_EXPIRED
  WELCOME
}

enum SubStatus {
  ACTIVE
  CANCELLED
  EXPIRED
  PENDING
}

model User {
  id            String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  email         String    @unique
  name          String
  avatarUrl     String?   @map("avatar_url")
  googleId      String?   @unique @map("google_id")
  plan          PlanType  @default(FREE)
  planExpiresAt DateTime? @map("plan_expires_at")
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  locals        Local[]
  notifications Notification[]
  subscriptions Subscription[]

  @@map("users")
}

model Local {
  id           String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId       String   @map("user_id") @db.Uuid
  name         String
  address      String?
  minMarginPct Decimal  @default(20.00) @map("min_margin_pct") @db.Decimal(5, 2)
  currency              String    @default("ARS")
  lastIpcAppliedPeriod  DateTime? @map("last_ipc_applied_period")
  lastUsdAppliedPeriod  DateTime? @map("last_usd_applied_period")
  isActive              Boolean   @default(true) @map("is_active")
  createdAt             DateTime  @default(now()) @map("created_at")
  updatedAt             DateTime  @updatedAt @map("updated_at")

  user       User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  categories Category[]
  products   Product[]
  priceLists PriceList[]
  sales      Sale[]

  @@map("locals")
}

model CategoryTemplate {
  id             String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  slug           String    @unique
  name           String
  colorHex       String    @default("#16A34A") @map("color_hex")
  preferredIndex IndexType @default(IPC_INDEC) @map("preferred_index")
  sortOrder      Int       @default(0) @map("sort_order")
  createdAt      DateTime  @default(now()) @map("created_at")

  categories Category[]

  @@map("category_templates")
}

model Category {
  id             String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  localId        String    @map("local_id") @db.Uuid
  templateId     String?   @map("template_id") @db.Uuid
  name           String
  colorHex       String?   @default("#16A34A") @map("color_hex")
  preferredIndex IndexType @default(IPC_INDEC) @map("preferred_index")
  isActive       Boolean   @default(true) @map("is_active")
  createdAt      DateTime  @default(now()) @map("created_at")

  local    Local             @relation(fields: [localId], references: [id], onDelete: Cascade)
  template CategoryTemplate? @relation(fields: [templateId], references: [id], onDelete: SetNull)
  products Product[]

  @@unique([localId, name])
  @@unique([localId, templateId])
  @@map("categories")
}

model Product {
  id            String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  localId       String   @map("local_id") @db.Uuid
  categoryId    String?  @map("category_id") @db.Uuid
  name          String
  barcode       String?
  unit          ProductUnit  @default(unidad)
  cost          Decimal      @db.Decimal(12, 2)
  marginPct     Decimal      @map("margin_pct") @db.Decimal(5, 2)
  salePrice     Decimal      @map("sale_price") @db.Decimal(12, 2)
  marginStatus  MarginStatus @default(OK) @map("margin_status")
  isMarginAlert Boolean      @default(false) @map("is_margin_alert")
  notes         String?
  isActive      Boolean  @default(true) @map("is_active")
  createdAt     DateTime @default(now()) @map("created_at")
  updatedAt     DateTime @updatedAt @map("updated_at")

  local        Local          @relation(fields: [localId], references: [id], onDelete: Cascade)
  category     Category?      @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  priceHistory PriceHistory[]
  saleLines    SaleLine[]

  @@unique([localId, barcode])
  @@index([localId, isActive])
  @@index([barcode])
  @@map("products")
}

model PriceHistory {
  id           String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  productId    String         @map("product_id") @db.Uuid
  cost         Decimal        @db.Decimal(12, 2)
  marginPct    Decimal        @map("margin_pct") @db.Decimal(5, 2)
  salePrice    Decimal        @map("sale_price") @db.Decimal(12, 2)
  changeReason ChangeReason   @map("change_reason")
  ipcReference Decimal?       @map("ipc_reference") @db.Decimal(5, 2)
  note         String?
  recordedAt   DateTime       @default(now()) @map("recorded_at")

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId, recordedAt(sort: Desc)])
  @@map("price_history")
}

model EconomicIndex {
  id        String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  type      IndexType
  period    DateTime
  valuePct  Decimal   @map("value_pct") @db.Decimal(6, 3)
  sourceUrl String?   @map("source_url")
  fetchedAt DateTime  @default(now()) @map("fetched_at")

  @@unique([type, period])
  @@index([type, period(sort: Desc)])
  @@map("economic_indices")
}

model PriceList {
  id        String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  localId   String       @map("local_id") @db.Uuid
  format    ExportFormat
  fileUrl   String?      @map("file_url")
  sharedVia String?      @map("shared_via")
  createdAt DateTime     @default(now()) @map("created_at")

  local Local @relation(fields: [localId], references: [id], onDelete: Cascade)

  @@map("price_lists")
}

model Notification {
  id        String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  type      NotifType
  title     String
  body      String
  isRead    Boolean   @default(false) @map("is_read")
  metadata  Json?
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("notifications")
}

model Subscription {
  id               String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId           String    @map("user_id") @db.Uuid
  plan             PlanType
  status           SubStatus
  mpSubscriptionId String?   @map("mp_subscription_id")
  amountArs        Decimal   @map("amount_ars") @db.Decimal(10, 2)
  billingCycle     String    @default("monthly") @map("billing_cycle")
  startedAt        DateTime  @default(now()) @map("started_at")
  expiresAt        DateTime? @map("expires_at")
  cancelledAt      DateTime? @map("cancelled_at")
  createdAt        DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("subscriptions")
}

model Sale {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  localId   String   @map("local_id") @db.Uuid
  soldAt    DateTime @map("sold_at") @db.Timestamptz(3)
  note      String?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  local Local      @relation(fields: [localId], references: [id], onDelete: Cascade)
  lines SaleLine[]

  @@index([localId, soldAt(sort: Desc)])
  @@map("sales")
}

model SaleLine {
  id               String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  saleId           String   @map("sale_id") @db.Uuid
  productId        String   @map("product_id") @db.Uuid
  quantity         Decimal  @db.Decimal(10, 3)
  unitSalePrice    Decimal  @map("unit_sale_price") @db.Decimal(12, 2)
  unitCostSnapshot Decimal  @map("unit_cost_snapshot") @db.Decimal(12, 2)
  createdAt        DateTime @default(now()) @map("created_at")

  sale    Sale    @relation(fields: [saleId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Restrict)

  @@index([saleId])
  @@index([productId])
  @@map("sale_lines")
}
